--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "jest",
-    "testWatch": "jest --watch"
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
